<resources>
    <string name="app_name">"Stuffing list"</string>

    <string name="colorWhite">White</string>
    <string name="colorBlack">Black</string>
    <string name="colorGray">Gray</string>
    <string name="colorRed">Red</string>
    <string name="colorCrimson">Crimson</string>
    <string name="colorSalmon">Salmon</string>
    <string name="colorBeige">Beige</string>
    <string name="colorOrange">Orange</string>
    <string name="colorBrown">Brown</string>
    <string name="colorWalnut">Walnut</string>
    <string name="colorBlue">Blue</string>
    <string name="colorMalibu">Malibu</string>
    <string name="colorGreen">Green</string>
    <string name="colorYellowGreen">Yellow Green</string>
    <string name="colorMint">Mint</string>
    <string name="colorYellow">Yellow</string>
    <string name="colorPink">Pink</string>
    <string name="colorViolet">Violet</string>
    <string name="colorMagenta">Magenta</string>
    <string name="colorPurple">Purple</string>

    <string-array name="colorCategory">
        <item>@string/colorWhite</item>
        <item>@string/colorGray</item>
        <item>@string/colorBlack</item>
        <item>@string/colorRed</item>
        <item>@string/colorCrimson</item>
        <item>@string/colorSalmon</item>
        <item>@string/colorBeige</item>
        <item>@string/colorOrange</item>
        <item>@string/colorBrown</item>
        <item>@string/colorWalnut</item>
        <item>@string/colorBlue</item>
        <item>@string/colorMalibu</item>
        <item>@string/colorGreen</item>
        <item>@string/colorYellowGreen</item>
        <item>@string/colorMint</item>
        <item>@string/colorYellow</item>
        <item>@string/colorPink</item>
        <item>@string/colorViolet</item>
        <item>@string/colorMagenta</item>
        <item>@string/colorPurple</item>
    </string-array>

    <string-array name="listColorCategory">
        <item>@string/colorBlack</item>
        <item>@string/colorGray</item>
        <item>@string/colorWhite</item>
        <item>@string/colorRed</item>
        <item>@string/colorCrimson</item>
        <item>@string/colorSalmon</item>
        <item>@string/colorBeige</item>
        <item>@string/colorOrange</item>
        <item>@string/colorBrown</item>
        <item>@string/colorWalnut</item>
        <item>@string/colorBlue</item>
        <item>@string/colorMalibu</item>
        <item>@string/colorGreen</item>
        <item>@string/colorYellowGreen</item>
        <item>@string/colorMint</item>
        <item>@string/colorYellow</item>
        <item>@string/colorPink</item>
        <item>@string/colorViolet</item>
        <item>@string/colorMagenta</item>
        <item>@string/colorPurple</item>
    </string-array>

    <!-- admob-->
    <string name="TEST_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="TEST_fullscreen_video_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>
    <string name="TEST_fullscreen_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="TEST_admob_app_id"> ca-app-pub-3940256099942544~3347511713</string>

    <string name="REAL_admob_app_id"> ca-app-pub-6729344454320392~2351708278</string>
    <string name="REAL_banner_ad_unit_id">ca-app-pub-6729344454320392/5043377227</string>
    <string name="REAL_fullscreen_ad_unit_id">ca-app-pub-6729344454320392/6845014442</string>


    <!-- main.xml-->
    <string name="stuff_to_do">Stuff to do</string>
    <string name="enter_here">Please enter here.</string>

    <!-- pref.xml  -->
    <string name="app_activation">App Activation</string>
    <string name="app_activated">App activated</string>
    <string name="app_disabled">App disabled</string>
    <string name="text_color">Text Color</string>
    <string name="list_color">List Color</string>
    <string name="background_color">Background Color</string>

    <!-- input_box,xml -->
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>

    <!-- ask_box.xml  -->
    <string name="ask_delete_item">Delete item</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="app_settings">Settings</string>

    <!-- exit dialog -->
    <string name="exit_dialog_message">Exit the app?</string>
    <string name="exit_confirm">Exit</string>

    <!-- mainActivity.kt -->
    <string name="empty_input_message">Empty input</string>
    <string name="permission_denied_message">Permission denied</string>
    <string name="permission_set_message">Permission set</string>


    <!--TodoLockScreenActivity.kt -->
    <string name="exit_app_message">Exit App</string>
    <string name="nothing_left_message">There is nothing left to do.</string>

    <!-- LockScreenService.kt-->
    <string name="view_app">view</string>
    <string name="setting_app">setting</string>

</resources>
