<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="useLockScreen"
        android:summaryOff="@string/app_disabled"
        android:summaryOn="@string/app_activated"
        android:title="@string/app_activation" />

    <com.odom.todolockscreen.ColorPickerPreference
        android:key="textColorCategory"
        android:title="@string/text_color" />

    <com.odom.todolockscreen.ColorPickerPreference
        android:key="listColorCategory"
        android:title="@string/list_color" />

    <com.odom.todolockscreen.ColorPickerPreference
        android:key="backgroundColorCategory"
        android:title="@string/background_color" />

</PreferenceScreen>
